<resources>
    <string-array name="Idiomas">
        <item>Español</item>
        <item>English</item>
    </string-array>
    <string name="app_name">Prost &amp; Drink</string>
    <string name="instrucciones">Instrucciones</string>
    <string name="principal_juego">Juego</string>
    <string name="principal_sorteo">Sortear</string>
    <string name="contentDescription_atras">Icono de flecha hacia atras</string>
    <string name="contentDescription_principal_acerca_de">Icono para la información sobre la aplicación</string>
    <string name="contentDescription_principal_settings">Icono para la configuración de la aplicación</string>
    <string name="contentDescription_principal_ayuda">Icono para la ayuda de la aplicación</string>
    <string name="Configuración">Configuración</string>
    <string name="Sonido">Sonido</string>
    <string name="Volumen">Volumen</string>
    <string name="Idioma">Idioma</string>
    <string name="Guardar">Guardar</string>
    <string name="CambiosGuardados">Se han guardado tus cambios</string>
    <string name="juegoRapido">Juego rapido</string>
    <string name="juegoPersonalizado">Juego personalizado</string>
    <string name="ElegirJugadores">Elección de Jugadores</string>
    <string name="JugadorAñadir">Jugador a añadir</string>
    <string name="AñadirParticipante">Añadir participante</string>
    <string name="CargarLista">Cargar la última lista</string>
    <string name="Preguntas">Preguntas</string>
    <string name="Retos">Retos</string>
    <string name="YoNunca">Yo nunca</string>
    <string name="HastaQue">Hasta Ques</string>
    <string name="Votaciones">Votaciones</string>
    <string name="Fotos">Fotos</string>
    <string name="Trabalenguas">Trabalenguas</string>
    <string name="Equilibrio">Equilibrio</string>
    <string name="Cazatopos">Cazatopos</string>
    <string name="Brujula">No pierdas el norte</string>
    <string name="Cartas">Cartas</string>
    <string name="Memoria">Memoria</string>
    <string name="Jugar">Jugar</string>
    <string name="error_personalizado">La configuración para iniciar el juego no es correcta. Recuerda que debes seleccionar al menos un tipo de juego.</string>
    <string name="titulo_back">Salir del juego</string>
    <string name="texto_back">¿Estás seguro de que quieres salir del juego?</string>
    <string name="OK">OK</string>
    <string name="Cancelar">Cancelar</string>
    <string name="Contestar">Contestar</string>
    <string name="Pasar">Pasar</string>
    <string name="noApto">Nah, no me atrevo</string>
    <string name="apto">¿Que no hay huevos? Me atrevo</string>
    <string name="votaciones_title">Votación</string>
    <string name="siguiente">Siguiente jugador</string>
    <string name="Imagen">Imagen</string>
    <string name="notificaciones_seguir">Seguir</string>
    <string name="elegirJugador">Elegir jugadores</string>
    <string name="jugadorAñadir">Jugador a añadir</string>
    <string name="numGrupos">Numero de grupos</string>
    <string name="sortear">Sortear</string>
    <string name="error_nombre_sorteo">Debes introducir un nombre para el jugador</string>
    <string name="error_equipos_menor">No puedes crear un número de equipos 0 o negativo</string>
    <string name="error_equipos_mayor">No puede haber más equipos que jugadores</string>
    <string name="sorteo_resultado">Resultado del sorteo</string>
    <string name="resultado_generar">Bebe %1$d, champ</string>
    <string name="pregunta_contestada1">¡¡Bien!! Por haber contestado puedes mandar beber %1$d a quien tu quieras</string>
    <string name="pregunta_contestada2">Así se juega, manda beber %1$d a quien tu quieras</string>
    <string name="pregunta_contestada3">¿¿Este juego es maravilloso, verdad?? Manda beber %1$d a quien tu quieras y recomienda la app a más gente</string>
    <string name="pregunta_nocontestada1">Si esto solo es un juego… Bebe %1$d, a ver si para la próxima contestas</string>
    <string name="pregunta_nocontestada2">No has entendido como hay que jugar. Para ganar hay que ser valiente, bebe %1$d</string>
    <string name="pregunta_nocontestada3">Parece que la cosa todavía esta fría. Bebe %1$d a ver si entras en calor</string>
    <string name="resultado_atrevido1">En este juego nos gusta la gente atrevida. Puedes mandar beber %1$d a quien tu quieras</string>
    <string name="resultado_atrevido2">¿No crees que tus amigos están demasiado bien? Reparte %1$d tragos</string>
    <string name="resultado_atrevido3">¡¡Muy bien!! Por valiente te toca elegir quien bebe tus %1$d tragos</string>
    <string name="resultado_cobarde1">¡¡Cloc-cloc!! Gallina. A los cobardes les toca beber. Bebe %1$d</string>
    <string name="resultado_cobarde2">No has entendido como hay que jugar. Para ganar hay que ser valiente, bebe %1$d a ver si la próxima te animas</string>
    <string name="resultado_cobarde3">Hay algo que no funciona. Los cobardes se quedan en casa. Bebe %1$d y la próxima vez échale huevos</string>
    <string name="resultado_votacion_bebe">Los que hayan votado %1$s beben %2$d</string>
    <string name="resultado_votacion_manda">Los que hayan votado %1$s pueden mandar beber %2$d a quien quieran</string>
    <string name="notificacion_hasta_que">El jugador %1$s ya ha finalizado su hasta que</string>
    <string name="error_equipos_inexistente">Debes introducir un número de equipos</string>
    <string name="error_camara">Hay algún problema con la cámara y no se puede sacar la foto</string>
    <string name="error_conexion">Hay un problema con la conexión a internet. No podrás compartir la imagen</string>
    <string name="compartir_publi">Te regalo esta foto. Prost&amp;Drink</string>
    <string name="camara_resultado">Que maravilloso es este juego!! Brinda y bebe %1$d</string>
    <string name="camara_content">Imagen tomada para la prueba que vas a compartir</string>
    <string name="repite">Repite:</string>
    <string name="intentos">Intentos restantes: </string>
    <string name="continuar">Continuar</string>
    <string name="trabalenguas_exito1">Todavía estás muy sobrio… Manda beber %1$d</string>
    <string name="trabalenguas_exito2">¡Muy bien! Manda beber %1$d</string>
    <string name="trabalenguas_exito3">¡Menuda dicción! Manda beber %1$d</string>
    <string name="trabalenguas_fracaso1">El alcohol va surgiendo efecto… Bebe %1$d</string>
    <string name="trabalenguas_fracaso2">¿Tan mal vas ya? Bebe %1$d</string>
    <string name="trabalenguas_fracaso3">Más suerte la próxima vez. Bebe %1$d</string>
    <string name="oreja_content">Ocono de una oreja para escuchar el trabalenguas</string>
    <string name="equilibrio_titulo">Frío/Caliente</string>
    <string name="helado">Helado</string>
    <string name="frio">Frío</string>
    <string name="templado">Templado</string>
    <string name="equilibrio_instrucciones">En este juego deberás conseguir colocar la aguja del medidor en la posición correcta. Para ello deberás girar el móvil para hacer que se mueva. Presta atención a las pistas.</string>
    <string name="instrucciones_brujula">Vamos con un juego un poco distinto. ¿Has bebido mucho? Intenta encontrar el norte.
        Vas a tener 3 intentos para hacer que el móvil apunte al norte. En cada intento habrá una cuenta atrás de 3 segundos y luego verás una brújula.
        ¿Serás capaz de orientarte?</string>
    <string name="empezar">Empezar</string>
    <string name="instrucciones_text">
        Gracias por usar nuestra aplicación. Te vamos a explicar brevemente todo lo que se puede hacer en ella. Espero que lo disfrutes.
        Para empezar, tienes que saber que la aplicación tiene dos partes. Una para hacer sorteos de equipos y otra para jugar a beber.
    </string>
    <string name="sorteo_instrucciones_title">Instrucciones de los sorteos</string>
    <string name="sorteo_instrucciones">
        Desde la pantalla de inicio de la aplicación puedes acceder a la sección de sorteos.
        En esa parte puedes indicar los jugadores que quieras en una lista, el número de equipos que quieres hacer y, al pulsar en sortear, la aplicación generará los equipos que deseas.
        Esta opción es útil para cuando se quiere jugar a otros juegos como parchís o billar.
    </string>
    <string name="juegos_instrucciones_title">Instrucciones de los juegos</string>
    <string name="juegos_instrucciones">
        El funcionamiento de los juegos es el siguiente:
        En la parte superior de la pantalla aparecerá qué jugador debe participar en cada momento. Antes de empezar, se pedirá el nombre de los jugadores para identificaros, se recomienda que no pongais dos jugadores con el mismo nombre.
        El juego no tiene fin, e irán apareciendo pruebas que tendréis que hacer. Cada prueba os puede mandar beber o repartir bebida a los demás jugadores. No olvides rellenar el vaso.
    </string>
    <string name="brujula_instrucciones">
        En este juego tienes que intentar apuntar tu móvil hacia el norte.
        Tendrás 3 intentos, en los que se te mostrará una cuenta atrás para buscarlo.
        Después de que se te acabe el tiempo podrás ver la brújula para saber lo que te has equivocado.
    </string>
    <string name="camara_instrucciones">
        Por los amigos que no están con vosotros.
        En este juego se te retará a sacar una foto a algo de la fiesta y compartírsela.
        Que se mueran de envidia.
    </string>
    <string name="cazatopos_instrucciones">
        Seguro que todos habéis jugado al cazatopos. Intenta matar al mayor número de topos que puedas en 30 segundos, pero ten cuidado, que si te equivocas se te penalizará.
    </string>
    <string name="hastaque_instrucciones">
        Déjate llevar. Hasta que pasen un numero de turnos tienes que hacer o te tienen que hacer algo.
        Solo tienes que leer el mensaje y&#8230; ¡Qué decida el juego!
    </string>
    <string name="pregunta_instrucciones">
        La aplicación te hará preguntas (puede que comprometidas).
        Si no contestas tendrás que beber. A ver si el alcohol te suelta la lengua.
    </string>
    <string name="reto_instrucciones">
        ¿A que no hay huevos?
        Si te atreves y haces los retos que te proponemos, tendrás premio, si no castigo.
    </string>
    <string name="trabalenguas_instrucciones">
        No hay quien te entienda borracho. Intenta decir un trabalenguas que te proponemos al microfono del teléfono.
        Será capaz de entenderte. Recuerda… Al micrófono, ¡no a la columna del bar!
    </string>
    <string name="votacion_instrucciones">
        Fácil, sencillo y para todo el grupo. Encuesta a todos para ver que opción prefieren de las que te damos.
        Marca la opción más votada y la aplicación os dirá que hacer.
    </string>
    <string name="cartas_instrucciones">
        En este juego solo tienes que adivinar la carta que se encuentra boca abajo. Apareceran tres cartas, una por una. Y se te preguntará si es rojo o negro, o par o impar.
        Intenta acertarlas todas.
    </string>
    <string name="memoria_instrucciones">
        En este juego te presentamos una serie de 12 cartas.
        Tendrás 15 segundos para memorizar su posición, tras los cuales les daremos la vuelta a las cartas.
        Te mostraremos una carta y te pediremos que señales donde está.
    </string>
    <string name="yonunca_instrucciones">
        Esta actividad es grupal. Se enuncia una oración de tipo "Yo nunca he hecho X".
        Aquellos miembros del grupo que sí lo hayan hecho alguna vez deberán beber un trago.
    </string>
    <string name="antes">Antes de empezar…</string>
    <string name="instrucciones_activity_bebida">Aseguraos de tener siempre bebida en el vaso</string>
    <string name="instrucciones_activity_desarrollo">Van a aparecer juegos que os dirán que hacer, teneis que contestar a todo y atreveros a realizar los retos</string>
    <string name="instrucciones_activity_instrucciones">Si todavía tienes dudas te enseñamos las instrucciones</string>
</resources>